# parsers

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  logging.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: parse-schedules.yaml
docs/source/: acknowledgements.rst  api.rst  conf.py  index.rst
schedule/: .example.env  README.md  academic.py  config.json  config.py  config_base.py  core_courses.py  electives.py  innohassle.py  merge_user_data.py  models.py  pyproject.toml  sheets.py  utils.py
schedule/bootcamp/: IBC 2023 Bachelors.xlsx  __main__.py  config.json  config.py  models.py  parser.py
schedule/cleaning/: __main__.py  config.json  config.py  parser.py
schedule/core_courses/: __main__.py  config.json  config.py  models.py  parser.py
schedule/core_courses2/: __main__.py  config.json  config.py  models.py  parser.py
schedule/electives/: __main__.py  config.json  config.py  models.py  parser.py
schedule/output/: AAI21-01.ics  B19-AI-01 (19).ics  B19-AI-01.ics  B19-CS-01 (24).ics  B19-CS-01.ics  B19-DS-01 (30).ics  B19-DS-01.ics  B19-RO-01 .ics  B19-RO-01.ics  B19-SD-01 (29).ics  B19-SD-01.ics  B19-SD-02 (29).ics  B19-SD-02.ics  B20-AI .ics  B20-AI.ics  B20-CS.ics  B20-DS .ics  B20-DS.ics  B20-RO (23).ics  B20-RO.ics  B20-SD-01 (29).ics  B20-SD-01.ics  B20-SD-02 (28).ics  B20-SD-02 .ics  B20-SD-02.ics  B21-AI-01.ics  B21-CS-01.ics  B21-DS-01.ics  B21-DS-02.ics  B21-RO-01.ics  B21-SD-01.ics  B21-SD-02.ics  B21-SD-03.ics  B22-CS-01.ics  B22-CS-02.ics  B22-CS-03.ics  B22-CS-04.ics  B22-CS-05.ics  B22-CS-06.ics  B22-DSAI-01.ics  (+29 more)
schedule/parser/: __init__.py  academic.py  config.json  config.py  core_courses.py  electives.py  electives_new.py  models.py  utils.py
schedule/processors/: regex.py
schedule/scripts/: convert_output_to_api.py
schedule/sport/: config.json  config.py  models.py  parser.py
schedule/sports/: __main__.py  config.json  config.py  models.py  parser.py
schedule/temp/: history_events.py
schedule/workshops/: Workshops IBC 2023.xlsx  __main__.py  config.json  config.py  models.py  parser.py
src/: __main__.py  config_base.py  constants.py  innohassle.py  logging_.py  merge_user_data.py  string_utils.py  utils.py
src/bootcamp/: IBC 2023 Bachelors.xlsx  __main__.py  config.json  config.py  models.py  parser.py
tests/: test_location_strings.py
(+868 files in other folders)
