[project]
name = "parsers"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "aiohttp>=3.10.6,<4",
    "colorlog>=6.8.2,<7",
    "google>=3.0.0,<4",
    "google-api-python-client>=2.147.0,<3",
    "google-auth-httplib2>=0.2.0,<0.3",
    "google-auth-oauthlib>=1.2.0,<2",
    "html5lib~=1.1",
    "httpx>=0.28.1",
    "icalendar>=5.0.13,<6",
    "openpyxl>=3.1.2,<4",
    "pandas>=2.0.3,<3",
    "pydantic>=2.11.7",
    "pytest>=8.3.3,<9",
    "python-dotenv>=1.0.1,<2",
    "pyyaml>=6.0.2,<7",
    "ruff>=0.6.8,<0.7",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"
